# num2tab

./: .gitignore  Cargo.toml  README.md  num2tab.toml
.github/workflows/: deploy-pages.yml
docs/: README.ja.md
src/: chord.rs  lib.rs  main.rs
www/: build.sh  flake.nix  index.html
